[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/foley/bnig grass/grassbig1.png" type="Texture" id=1]
[ext_resource path="res://art/foley/bnig grass/grassbig2.png" type="Texture" id=2]
[ext_resource path="res://art/foley/bnig grass/grassbig4.png" type="Texture" id=3]
[ext_resource path="res://art/foley/bnig grass/grassbig3.png" type="Texture" id=4]
[ext_resource path="res://art/foley/bnig grass/grassbig5.png" type="Texture" id=5]
[ext_resource path="res://big grass.gd" type="Script" id=6]
[ext_resource path="res://art/foley/big grass left/grassbig3.png" type="Texture" id=7]
[ext_resource path="res://art/foley/big grass left/grassbig1.png" type="Texture" id=8]
[ext_resource path="res://art/foley/big grass left/grassbig2.png" type="Texture" id=9]
[ext_resource path="res://art/foley/big grass left/grassbig4.png" type="Texture" id=10]
[ext_resource path="res://art/foley/big grass left/grassbig5.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "left",
"speed": 25.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": false,
"name": "walk",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.75474, 6.39105 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.82095, 6.38989 )

[node name="big grass" type="Node2D"]
z_index = 2
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "left"
frame = 1
centered = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 77

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5.63193, 9.58477 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 9.34005, 9.5836 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
